--- a/dublin_bus/dbus/templates/dbus/index.html
+++ b/dublin_bus/dbus/templates/dbus/index.html
@@ -116,8 +116,8 @@
       function drawRoute(data){
 
 	var directionsService = new google.maps.DirectionsService();
-        var directionsDisplay = new google.maps.DirectionsRenderer();
-
+        var directionsDisplay = new google.maps.DirectionsRenderer({suppressMarkers:true});
+	
 	directionsDisplay.setMap(map);
 
 	var len = Object.keys(data).length
@@ -132,14 +132,13 @@
 		transitOptions: {
 			modes : ['BUS'],
 			routingPreference : 'FEWER_TRANSFERS'
-			}
-
-
+			},
+		
 		}
 	directionsService.route(request, function(result, status){
                 
 		if (status == 'OK') {
-                        
+                	   
 			directionsDisplay.setDirections(result);
 		}
 	});
@@ -230,11 +229,11 @@ var markers = []
           markers.push(marker)
                            
                     };
-		var content = "<table> <tr> <th> Route </th> <th> ETA </th> </tr> " 
+		var content = "<table> <tr> <th> Route </th> <th style = 'padding : 5px'> ETA(mins) </th> </tr> " 
 		
 		for (i in context[0]["rtpi"]["results"]){
 			
-			content = content + "<tr> <td>" + context[0]["rtpi"]["results"][i]["route"] + "</td> <td>" + context[0]["rtpi"]["results"][i]["duetime"] + " minutes</td> </tr>"
+			content = content + "<tr> <td>" + context[0]["rtpi"]["results"][i]["route"] + "</td> <td>" + context[0]["rtpi"]["results"][i]["duetime"] + "</td> </tr>"
 		};
         
 	
@@ -245,6 +244,11 @@ var markers = []
 
 
 		infowindow.open(map, markers[0]);
+
+		google.maps.event.addListener(markers[0], 'click', function() {
+			console.log("hello");
+			infowindow.open(map, markers[0]);
+		});
 
 
 		map.setCenter(new google.maps.LatLng(Number(context[0]["lat"]), Number(context[key]["lon"])));   
