user input date time or leave now option

--- a/dublin_bus/dbus/static/dbus/index.css
+++ b/dublin_bus/dbus/static/dbus/index.css
@@ -71,6 +71,13 @@ padding-left: 15px;
         
 }
 
+#picker {
+    display: none;
+}
+
+#datetime-local {
+    display: none;
+}
 .post-form {
     padding-top: 80px;
     width: 300px;
